<resources>
    <string name="app_name">AnimalPedia</string>
    <string name="home_title1">Animal</string>
    <string name="home_title2">Pedia</string>
    <string name="home_category1">Amphibians</string>
    <string name="home_category2">Reptiles</string>
    <string name="home_category3">Fish</string>
    <string name="home_category4">Birds</string>
    <string name="home_category5">Mammals</string>
    <string name="search_hint">Search an animal!</string>
    <string name="favorites_hint">Your Favorites</string>
    <string name="map_hint">Click on any continent to view its animals!</string>
    <string name="map_sAmerica">South America</string>
    <string name="map_nAmerica">North America</string>
    <string name="map_europe">Europe</string>
    <string name="map_africa">Africa</string>
    <string name="map_asia">Asia</string>
    <string name="map_oceania">Oceania</string>
    <string name="map_antarctica">Antarctica</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_hint">Choose theme</string>
    <string name="settings_theme_def">Default System</string>
    <string name="settings_theme_l">Light</string>
    <string name="settings_theme_d">Dark</string>
    <string name="favorites_hint_0">No animals in your favorites</string>
    <string name="favorites_hint_1">1 animal in your favorites</string>
    <string name="favorites_hint_2plus">animals in your favorites</string>
    <string name="title_home_button">Home</string>
    <string name="title_search_button">Search</string>
    <string name="title_favorites_button">Favorites</string>
    <string name="title_map_button">Map</string>
    <string name="info_title">Info</string>
    <string name="contact">Contact</string>
    <string name="social_media">Instagram</string>
    <string name="display_settings">Display Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="about_us">About Us</string>
    <string name="info_title_summary">Learn about us</string>
    <string name="contact_summary">Sent us your comments</string>
    <string name="follow_us_summary">Follow us</string>
    <string name="our_social_media">Our Social Media</string>
    <string name="info_message">We are a group of undergraduate students at computer science department of Aristotle University of Thessaloniki.
    \n\nDevelopers:\nVasilogamvros Evangelos\nVerros Stelios\nStravelas Andreas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="item_theme_entry">
        <item>Same as system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="item_theme_value">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>