<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_hint"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:checkedButton="@id/RB_DEFAULT"
        android:layout_marginLeft="32dp">

        <RadioButton
            android:id="@+id/RB_DEFAULT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_def"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/RB_LIGHT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_l"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/RB_DARK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_d"
            android:textSize="16sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>