<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_bar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/home_title1"
        android:textColor="#8F5B34"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/textView1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/koala" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title2"
        android:textColor="@color/green"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="32dp"
        android:text="@string/map_hint"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />
    <!--android:background="@drawable/style_button"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageViewMap"
            android:layout_width="400dp"
            android:layout_height="260dp"
            android:contentDescription="@string/map_hint"
            android:src="@drawable/colored_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/button_north_america"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:text="@string/map_nAmerica"
            android:textColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap"
            app:layout_constraintTop_toTopOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_south_america"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginBottom="68dp"
            android:background="@android:color/transparent"
            android:text="@string/map_sAmerica"
            android:textColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMap"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_africa"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginBottom="86dp"
            android:background="@android:color/transparent"
            android:text="@string/map_africa"
            android:textColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMap"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_europe"
            android:layout_width="86dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:text="@string/map_europe"
            android:textColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap"
            app:layout_constraintTop_toTopOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_asia"
            android:layout_width="140dp"
            android:layout_height="116dp"
            android:background="@android:color/transparent"
            android:text="@string/map_asia"
            android:textColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap"
            app:layout_constraintTop_toTopOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_oceania"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginBottom="64dp"
            android:background="@android:color/transparent"
            android:text="@string/map_oceania"
            android:textColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMap"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap" />

        <Button
            android:id="@+id/button_antarctica"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:text="@string/map_antarctica"
            android:textColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMap"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMap"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="@+id/imageViewMap" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>